[gd_scene load_steps=4 format=3 uid="uid://ql5gst60j1lm"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_qx77c"]
[ext_resource type="PackedScene" uid="uid://qo5lplwkoqa5" path="res://ui/join_lobby_menu.tscn" id="2_vi7wh"]
[ext_resource type="PackedScene" uid="uid://d3odrh13873c8" path="res://ui/settings_menu.tscn" id="3_uclao"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qx77c")
join_lobby_menu_scene = ExtResource("2_vi7wh")
settings_menu = ExtResource("3_uclao")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999162, 1)
color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="LogoPlaceholder" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -290.0
offset_top = 70.0
offset_right = 290.0
offset_bottom = 204.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 80
text = "Spring Dynasty"

[node name="MainMenuButtons" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.5
offset_top = -74.0
offset_right = 239.5
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="NewGameButton" type="Button" parent="MainMenuButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "New Game"

[node name="ContinueButton" type="Button" parent="MainMenuButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "Continue"

[node name="MultiplayerButton" type="Button" parent="MainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Multiplayer
"

[node name="SettingsButton" type="Button" parent="MainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="QuitButton" type="Button" parent="MainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit Game"

[connection signal="pressed" from="MainMenuButtons/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MainMenuButtons/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MainMenuButtons/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="MainMenuButtons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainMenuButtons/QuitButton" to="." method="_on_quit_button_pressed"]
